<resources>
    <string name="app_name">New Order</string>
    <string name="action_settings">Settings</string>
    <string name="hint_title">Enter Order title</string>
    <string name="hint_type">Enter Order type</string>
    <string name="button_date">change date</string>
    <string name="check_box_finished">finished</string>
    <string name="type">Type</string>
    <string name="title">Title</string>
    <string name="title_activity_order_list">Orders List</string>
    <string name="title_activity_list">Order List</string>
    <string name="new_order">New Order</string>
    <string name="finished_description">finished</string>
    <string name="date_dialog">Order Date</string>
</resources>
